# EDFarpoint

./: .gitignore  ED_COMPANION_SPEC.md  README.md
.github/workflows/: build-android.yml  build-windows.yml
data/: canonn_codex_prices.json  canonn_codex_ref.json  clonal_colony_ranges.json  vista_genomics_prices.json
ed-companion/: CLAUDE.md  index.html  overlay.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
ed-companion/data/: convert_bioscan_rules.py
ed-companion/src/: App.svelte  app.d.ts  main.ts  overlay.ts
ed-companion/src-tauri/: Cargo.toml  tauri.conf.json
ed-companion/src-tauri/assets/: bio_rules.json
ed-companion/src-tauri/capabilities/: default.json
ed-companion/src-tauri/icons/: icon.icns
ed-companion/src-tauri/src/: config.rs  lib.rs
ed-companion/src-tauri/src/bio/: mod.rs  predictor.rs
ed-companion/src-tauri/src/edsm/: mod.rs
ed-companion/src-tauri/src/journal/: cache.rs  events.rs  expedition_history.rs  mod.rs  watcher.rs
ed-companion/src-tauri/src/remote/: mod.rs
ed-companion/src-tauri/src/stats/: mod.rs
ed-companion/src-tauri/src/status/: mod.rs
ed-companion/src-tauri/src/window/: mod.rs
ed-companion/src/lib/components/: CarrierPanel.svelte  Header.svelte  StatusBar.svelte  SystemMap.svelte  SystemView.svelte
ed-companion/src/lib/components/BioTracker/: BioTracker.svelte
ed-companion/src/lib/components/BodyTable/: BodyTable.svelte
ed-companion/src/lib/components/ExpeditionHistory/: ExpeditionHistory.svelte
ed-companion/src/lib/components/LifetimeStats/: LifetimeStats.svelte
ed-companion/src/lib/components/RouteView/: RouteView.svelte
ed-companion/src/lib/components/Settings/: Settings.svelte
ed-companion/src/lib/components/TripStats/: TodayStats.svelte  TripStats.svelte
ed-companion/src/lib/components/overlay/: OverlayWidget.svelte
ed-companion/src/lib/stores/: bio.svelte.ts  bio.ts  carrier.svelte.ts  config.svelte.ts  expedition.svelte.ts  expeditionHistory.svelte.ts  journal.svelte.ts  journal.ts  lifetime.svelte.ts  lifetime.ts  overlayViewModel.svelte.ts  route.svelte.ts  route.ts  session.svelte.ts  status.svelte.ts  system.svelte.ts  system.ts  trip.svelte.ts  trip.ts
ed-companion/src/lib/types/: overlay.ts
ed-companion/src/lib/utils/: bioPredict.ts  bioValues.ts  overlayCalc.ts  remoteClient.ts  remotePush.ts  sounds.ts  valueCalc.ts
