[package]
name = "ed-companion"
version = "1.0.3"
description = "ED Farpoint - Elite Dangerous Exploration & Exobiology Companion"
authors = ["Lazy Cat"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
lru = "0.13"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
parking_lot = "0.12"
urlencoding = "2"
thiserror = "2"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-stream = "0.1"

# Desktop-only dependencies (file watching)
[target.'cfg(not(target_os = "android"))'.dependencies]
notify = { version = "7", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
